force-app/main/default/objects/Case/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Babysitting</fullName>
            </value>
            <value>
                <fullName>BLS</fullName>
            </value>
            <value>
                <fullName>CPR for the Professional Rescuer</fullName>
            </value>
            <value>
                <fullName>Emergency Medical Response</fullName>
            </value>
            <value>
                <fullName>First Aid/CPR/AED</fullName>
            </value>
            <value>
                <fullName>Lifeguarding</fullName>
            </value>
            <value>
                <fullName>Nurse Assistant Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Safety Training for Swim Coaches</fullName>
            </value>
            <value>
                <fullName>Swimming and Water Safety/Learn to Swim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>