force-app/main/default/objects/Case/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aquatics</fullName>
            </value>
            <value>
                <fullName>Instructors</fullName>
            </value>
            <value>
                <fullName>Certificates</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>List classes on RedCross.org</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Program Information</fullName>
            </value>
            <value>
                <fullName>Blended Learning</fullName>
            </value>
            <value>
                <fullName>Class Support</fullName>
            </value>
            <value>
                <fullName>Concerns/Kuddos</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>First Aid and CPR</fullName>
            </value>
            <value>
                <fullName>Instructor Certification</fullName>
            </value>
            <value>
                <fullName>Online Completion Report and Roster</fullName>
            </value>
            <value>
                <fullName>Submission of Class Paperwork</fullName>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Customer Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>