force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Used in Invoice Cases</description>
    <inlineHelpText>Select the most likely reason the issue occurred.</inlineHelpText>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2018 Price Increase</fullName>
            </value>
            <value>
                <fullName>Annual Price Increase</fullName>
            </value>
            <value>
                <fullName>AP/LTP Annual Price Increase</fullName>
            </value>
            <value>
                <fullName>Applied to Different LOB</fullName>
            </value>
            <value>
                <fullName>Contract Expired</fullName>
            </value>
            <value>
                <fullName>Contract Not Accurate</fullName>
            </value>
            <value>
                <fullName>Coupon Expired</fullName>
            </value>
            <value>
                <fullName>Coupon Not Applied</fullName>
            </value>
            <value>
                <fullName>Coupon Not Created</fullName>
            </value>
            <value>
                <fullName>Customer Account/ORG Information Not Accurate</fullName>
            </value>
            <value>
                <fullName>Customer Not Aware of Coupon</fullName>
            </value>
            <value>
                <fullName>Data Entry Error - Customer</fullName>
            </value>
            <value>
                <fullName>Data Entry Error - Field Staff</fullName>
            </value>
            <value>
                <fullName>Data Entry Error – Internal</fullName>
            </value>
            <value>
                <fullName>Data Entry Error - TSC</fullName>
            </value>
            <value>
                <fullName>Instructor Affiliation</fullName>
            </value>
            <value>
                <fullName>Org Info Inaccurate</fullName>
            </value>
            <value>
                <fullName>Pymt Sent to Wrong Address</fullName>
            </value>
            <value>
                <fullName>Sales Misinformation</fullName>
            </value>
            <value>
                <fullName>Undocumented Pricing Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>