force-app/main/default/objects/Case/fields/Tertiary_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Sub_Type__c</fullName>
    <label>Tertiary Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Sub_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned In Portal</fullName>
            </value>
            <value>
                <fullName>AP/LTP</fullName>
            </value>
            <value>
                <fullName>Cardio</fullName>
            </value>
            <value>
                <fullName>Cintas</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>CPR for the Professional Rescuer</fullName>
            </value>
            <value>
                <fullName>CPRO</fullName>
            </value>
            <value>
                <fullName>EMR</fullName>
            </value>
            <value>
                <fullName>FA/CPR/AED</fullName>
            </value>
            <value>
                <fullName>First Aid/CPR/AED</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Lifeguarding</fullName>
            </value>
            <value>
                <fullName>Portal Billing</fullName>
            </value>
            <value>
                <fullName>Submitted by Email</fullName>
            </value>
            <value>
                <fullName>Submitted by Postal Mail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Normal Shipping</fullName>
            </value>
            <value>
                <fullName>Overnight Shipping</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Recertification</fullName>
            </value>
            <value>
                <fullName>Learner</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Launch Online Content</fullName>
            </value>
            <value>
                <fullName>Add/Update Contact Info on Profile</fullName>
            </value>
            <value>
                <fullName>Add/Remove Org from Profile</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Merging Profiles</fullName>
            </value>
            <value>
                <fullName>Course Link</fullName>
            </value>
            <value>
                <fullName>Log in Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>