force-app/main/default/objects/Case/fields/Type_of_Price_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Price_Dispute__c</fullName>
    <description>Depends on Service Case Second Sub Type</description>
    <inlineHelpText>Select the value that further describes the customer’s issue.</inlineHelpText>
    <label>Third Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dispute_Issue__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Reconciliation</fullName>
            </value>
            <value>
                <fullName>ACH Detail</fullName>
            </value>
            <value>
                <fullName>ACH Info Request</fullName>
            </value>
            <value>
                <fullName>Add/Change PO</fullName>
            </value>
            <value>
                <fullName>Apply Balance to Current Year/Transaction</fullName>
            </value>
            <value>
                <fullName>Apply On Acct Credits</fullName>
            </value>
            <value>
                <fullName>AR Exception</fullName>
            </value>
            <value>
                <fullName>Attempt to Collect</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Chp 7</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Chp 9 or 11</fullName>
            </value>
            <value>
                <fullName>Billed to Chapter</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Payment History</fullName>
            </value>
            <value>
                <fullName>Change CFS Customer Class</fullName>
            </value>
            <value>
                <fullName>Change Org ID/Name/Address</fullName>
            </value>
            <value>
                <fullName>Change Payment Terms</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Correct Account Wrong Invoice</fullName>
            </value>
            <value>
                <fullName>Coupon/Discount Not Applied</fullName>
            </value>
            <value>
                <fullName>Coupon Details</fullName>
            </value>
            <value>
                <fullName>Course Record</fullName>
            </value>
            <value>
                <fullName>Credit Balance</fullName>
            </value>
            <value>
                <fullName>Credit Balance Application</fullName>
            </value>
            <value>
                <fullName>Credit Card Receipt</fullName>
            </value>
            <value>
                <fullName>Credit Check</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Customer Already Paid</fullName>
            </value>
            <value>
                <fullName>Customer Forms</fullName>
            </value>
            <value>
                <fullName>Customer PO</fullName>
            </value>
            <value>
                <fullName>Deconsolidate/Consolidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>