force-app/main/default/objects/Case/recordTypes/Community_Instructor_Case.recordType-meta.xml
<RecordType>
    <fullName>Community_Instructor_Case</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>The record type for tracking Community Instructor support cases.</description>
    <label>Community Instructor Case</label>
</RecordType>