force-app/main/default/objects/Case/recordTypes/Community_Learner_Case.recordType-meta.xml
<RecordType>
    <fullName>Community_Learner_Case</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>The record type for tracking Community Learner support cases.</description>
    <label>Community Learner Case</label>
</RecordType>