force-app/main/default/objects/Case/recordTypes/Community_Partner_Case.recordType-meta.xml
<RecordType>
    <fullName>Community_Partner_Case</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>The record type for tracking Community Partner support cases.</description>
    <label>Community Partner Case</label>
</RecordType>