force-app/main/default/objects/Case/recordTypes/CRE_Case.recordType-meta.xml
<RecordType>
    <fullName>CRE_Case</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>Case to Track CRE Requests</description>
    <label>CRE Case</label>
</RecordType>