force-app/main/default/objects/Case/recordTypes/Invoicing.recordType-meta.xml
<RecordType>
    <fullName>Invoicing</fullName>
    <active>true</active>
    <businessProcess>Invoicing Support Process</businessProcess>
    <description>Use this case type to report billing-related issues and requests</description>
    <label>Invoicing Case</label>
</RecordType>