force-app/main/default/objects/Case/recordTypes/LTP_on_RCO.recordType-meta.xml
<RecordType>
    <fullName>LTP_on_RCO</fullName>
    <active>true</active>
    <businessProcess>LTPonRCO</businessProcess>
    <label>LTP on RCO</label>
</RecordType>