force-app/main/default/objects/Case/recordTypes/Non_Training_Case.recordType-meta.xml
<RecordType>
    <fullName>Non_Training_Case</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>Record type for TSC Agents to create and manage cases for non-training calls</description>
    <label>Non-Training Case</label>
</RecordType>