force-app/main/default/objects/Case/recordTypes/RBC_Case.recordType-meta.xml
<RecordType>
    <fullName>RBC_Case</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>Case to Track RBC Requests</description>
    <label>RBC Case</label>
</RecordType>