force-app/main/default/objects/Case/recordTypes/RCS_PO.recordType-meta.xml
<RecordType>
    <fullName>RCS_PO</fullName>
    <active>true</active>
    <businessProcess>RCS PO</businessProcess>
    <description>Related to RCS PO</description>
    <label>RCS PO</label>
</RecordType>