force-app/main/default/objects/Case/recordTypes/Service_Cases.recordType-meta.xml
<RecordType>
    <fullName>Service_Cases</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>The record type for tracking customer support cases.</description>
    <label>Service Cases</label>
</RecordType>