force-app/main/default/objects/Case/recordTypes/Social_Case.recordType-meta.xml
<RecordType>
    <fullName>Social_Case</fullName>
    <active>true</active>
    <businessProcess>Social Customer Care Process</businessProcess>
    <description>Social Customer Care Cases</description>
    <label>Social Case</label>
</RecordType>