force-app/main/default/objects/Case/validationRules/RCS_PO_Case_Creation_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>RCS_PO_Case_Creation_Restriction</fullName>
    <active>true</active>
    <description>Prevent creation of RCS PO Case.</description>
    <errorConditionFormula>AND( $User.Id != &quot;005d0000001WLvx&quot;, /*Jane McInerney*/ 
$User.Id != &quot;0050V000006jKNy&quot;, /*Nyle Grimes*/ 
$User.Id != &quot;005d0000001Wyup&quot;, /*Kara Desmarais*/ 
$User.Id != &quot;005d0000001Vmik&quot;, /*Wendy Firdman*/ 
$User.Id != &quot;005d0000000Twtn&quot;, /*Joseph Kensil*/
$User.Id != &quot;005d0000002mPMz&quot;, /*Stephen Lynch*/
$User.Id != &quot;005d0000000Tvsu&quot;, /*LaJuanya Jones*/ 
$User.Id != &quot;005d0000001VstM&quot;, /*Rose Albert*/ 
$Profile.Name != &quot;System Administrator&quot;, /*System Admin*/ 
$Profile.Name != &quot;ARC SCC User&quot;, /*ARC SCC User*/ 
$Profile.Name != &quot;ARC Invoice Task Force&quot;, /*ARC Invoice Task Force*/ 
RecordType.Name= &quot;RCS PO&quot;, 
ISNEW() /* RCS PO Case creation */ 
)</errorConditionFormula>
    <errorMessage>You cannot create RCS PO Case.</errorMessage>
</ValidationRule>