force-app/main/default/objects/Case/validationRules/Require_Current_Discount_Amount_Curr.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Current_Discount_Amount_Curr</fullName>
    <active>false</active>
    <description>When the Invoice Case Sub Type is &quot;Price&quot; you must provide further information; Current Discount Amount</description>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &#39;Invoicing&#39;,
NOT(ISPICKVAL(Status, &#39;New&#39;) || ISPICKVAL(Status, &#39;New - Assigned&#39;)), 
ISPICKVAL( Dispute_Issue__c , &#39;Price&#39;), 
ISBLANK( Current_Discount_Amount_Cur__c), 
$Setup.Validation_Rules__c.Bypass_Rules__c = FALSE 
)</errorConditionFormula>
    <errorDisplayField>Current_Discount_Amount_Cur__c</errorDisplayField>
    <errorMessage>Please provide the Current Discount Amount</errorMessage>
</ValidationRule>